@@ -11,6 +11,7 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
     for menu scrubbing
   * MenuManager: add support for mouse trackers with triangle algorithm
     support (LP: #1618405)
+  * PanelView: scale gradient refinement properly
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
